added tests for the application
